# Spotify-tui

./: .env.example  CMakeLists.txt  Cargo.toml  Makefile  event.c  event.h  main  main.c  oauth.c  oauth.h  request.c  request.h  tui.c  tui.h  utils.c  utils.h  welcome.txt
include/: banner.h  event.h  library.h  oauth.h  request.h  tui-window.h  tui.h  utils.h
src/: app.rs  banner.c  event.c  events.rs  library.c  main.c  main.rs  music.rs  oauth.c  oauth.rs  request.c  tui-window.c  tui.c  ui.rs  utils.c
src/backup/: backup_app.rs  backup_events.rs  backup_main.rs  backup_ui.rs
