[package]
name = "TUI-test"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = { version = "0.28.1", features = ["termion"] }
rspotify = { version = "0.13.3", features = ["cli"] }
termion = "4.0.3"
time = "0.3.36"
tui = "0.19.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4.38"
dotenv = "0.15.0"
curl = "0.4.47"
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
base64 = "0.22.1"
